@@ -3,6 +3,14 @@
 	* Asterisk 1.8.3-rc2 Released.
 
 	------------------------------------------------------------------------
+	r303907 | mnicholson | 2011-01-25 14:56:12 -0600 (Tue, 25 Jan 2011) | 2 
+	lines
+
+	Reimplemented fax session reservation to reverse the ABI breakage 
+	introduced in r297486.
+	------------------------------------------------------------------------
+
+	------------------------------------------------------------------------
 	r303106 | sruffell | 2011-01-20 13:56:35 -0600 (Thu, 20 Jan 2011) | 15
 	lines
 
